--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "consolidate": "^0.15.1",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.2.1",
     "path": "^0.12.7",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "sqlite3": "^4.0.0"
   }
 }
