--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "any-db": "^2.2.1",
     "any-db-sqlite3": "^2.1.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
     "consolidate": "^0.15.1",
