--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hogan": "^1.0.2",
     "http": "0.0.0",
     "jsonwebtoken": "^8.2.1",
+    "nodemailer": "^4.6.4",
     "path": "^0.12.7",
     "socket.io": "^2.1.0",
     "sqlite3": "^4.0.0"
