--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "socket.io": "^2.1.0",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.0",
+    "zerorpc": "^0.9.7"
   }
 }
